--- a/askHueSatBriDialog.ui
+++ b/askHueSatBriDialog.ui
@@ -194,6 +194,13 @@
    </property>
   </widget>
  </widget>
+ <tabstops>
+  <tabstop>buttonBox</tabstop>
+  <tabstop>sliderContrast</tabstop>
+  <tabstop>sliderHue</tabstop>
+  <tabstop>sliderSat</tabstop>
+  <tabstop>sliderBrighness</tabstop>
+ </tabstops>
  <resources/>
  <connections>
   <connection>
