--- a/askBoneDialog.ui
+++ b/askBoneDialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>312</width>
-    <height>209</height>
+    <width>315</width>
+    <height>258</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,7 +17,7 @@
    <property name="geometry">
     <rect>
      <x>-100</x>
-     <y>170</y>
+     <y>220</y>
      <width>341</width>
      <height>32</height>
     </rect>
@@ -43,7 +43,7 @@
    <property name="geometry">
     <rect>
      <x>140</x>
-     <y>90</y>
+     <y>95</y>
      <width>161</width>
      <height>21</height>
     </rect>
@@ -69,13 +69,13 @@
    <property name="geometry">
     <rect>
      <x>10</x>
-     <y>90</y>
+     <y>95</y>
      <width>120</width>
      <height>20</height>
     </rect>
    </property>
    <property name="text">
-    <string>Bone:</string>
+    <string>bone:</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
@@ -121,7 +121,7 @@
    <property name="geometry">
     <rect>
      <x>140</x>
-     <y>124</y>
+     <y>174</y>
      <width>84</width>
      <height>20</height>
     </rect>
@@ -134,7 +134,7 @@
    <property name="geometry">
     <rect>
      <x>140</x>
-     <y>141</y>
+     <y>191</y>
      <width>161</width>
      <height>18</height>
     </rect>
@@ -147,13 +147,39 @@
    <property name="geometry">
     <rect>
      <x>-1</x>
-     <y>124</y>
+     <y>174</y>
      <width>131</width>
      <height>20</height>
     </rect>
    </property>
    <property name="text">
     <string>Piece currently centered:</string>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="cbCarryPos">
+   <property name="geometry">
+    <rect>
+     <x>140</x>
+     <y>130</y>
+     <width>161</width>
+     <height>21</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_6">
+   <property name="geometry">
+    <rect>
+     <x>-1</x>
+     <y>130</y>
+     <width>131</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>(optional) carry location:</string>
    </property>
    <property name="alignment">
     <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
